--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -3,7 +3,14 @@
   border: none;
   outline: none;
   padding: 10px;
-  width: 150px;
+  min-width: 32vw;
   line-height: 30px;
   margin-bottom: 30px;
+}
+
+@media only screen (min-width: 375px) {
+  .search-box{
+    max-width: 60vw;
+    margin: 0 auto;
+  }
 }
